# robot-demo

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json  show_git_branch.sh
docker/: Dockerfile.bundle  Dockerfile.edge_device
docs/: design.drawio
edge_device/: README.md
edge_device/ros2_ws/cloud_comm_node/: CMakeLists.txt  package.xml
edge_device/ros2_ws/cloud_comm_node/include/cloud_comm_node/: cloud_comm_node.hpp  command_bridge.hpp  command_validator.hpp  configuration.hpp  message_serializer.hpp  telemetry_bridge.hpp  zenoh_client.hpp
edge_device/ros2_ws/cloud_comm_node/src/: main.cpp
edge_device/ros2_ws/edge_device_launch/: package.xml  setup.cfg  setup.py
edge_device/ros2_ws/edge_device_launch/config/: zenoh_config.json5
edge_device/ros2_ws/edge_device_launch/launch/: edge_device_launch.py  edge_device_launch_local.py
edge_device/ros2_ws/edge_device_launch/resource/: edge_device_launch
edge_device/ros2_ws/edge_device_msgs/: CMakeLists.txt  package.xml
edge_device/ros2_ws/edge_device_msgs/msg/: BatteryEvent.msg  Beep.msg  Kick.msg  Leds.msg  Move.msg  RobotStatus.msg
edge_device/ros2_ws/robot_comm_node/: CMakeLists.txt  package.xml
edge_device/ros2_ws/robot_comm_node/include/robot_comm_node/: robot_comm_node.hpp
edge_device/ros2_ws/robot_comm_node/src/: main.cpp  robot_comm_node.cpp
edge_device/ros2_ws/robot_msgs/: CMakeLists.txt  package.xml
edge_device/ros2_ws/robot_msgs/msg/: RobotCmd.msg
edge_device/ros2_ws/system_status_node/: CMakeLists.txt  package.xml
edge_device/ros2_ws/system_status_node/include/system_status_node/: consts.h
edge_device/ros2_ws/system_status_node/src/: main.cpp
edge_device/ros2_ws/vision_node/: package.xml  setup.py
edge_device/ros2_ws/vision_node/vision_node/: vision_node.py
robot/open-t1/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
robot/open-t1/lib/BatterySensor/: CMakeLists.txt  library.json
robot/open-t1/lib/BatterySensor/src/: BatterySensor.cpp  BatterySensor.h
robot/open-t1/lib/Controller/: CMakeLists.txt  library.json
robot/open-t1/lib/Controller/src/: HttpController.cpp  HttpController.h  IController.h  RosController.cpp  RosController.h  SerialController.h
robot/open-t1/lib/LedTelltale/: CMakeLists.txt  library.json
robot/open-t1/lib/LedTelltale/src/: LedTelltale.cpp  LedTelltale.h
robot/open-t1/lib/MecanumDrive/: CMakeLists.txt  library.json
robot/open-t1/lib/MecanumDrive/src/: MecanumDrive.cpp  MecanumDrive.h
robot/open-t1/lib/Robot/: CMakeLists.txt  library.json
robot/open-t1/lib/Robot/src/: Robot.cpp  Robot.h
robot/open-t1/lib/SabertoothRC/: CMakeLists.txt  library.json
robot/open-t1/lib/SabertoothRC/src/: SabertoothRC.cpp  SabertoothRC.h
robot/open-t1/lib/SolenoidKicker/: CMakeLists.txt  library.json
robot/open-t1/lib/SolenoidKicker/src/: SolenoidKicker.cpp  SolenoidKicker.h
robot/open-t1/lib/WifiCom/: CMakeLists.txt  library.json
robot/open-t1/lib/WifiCom/src/: WifiCom.cpp  WifiCom.h  WifiConfig.cpp  WifiConfig.h
robot/open-t1/src/: CMakeLists.txt  main.cpp
robot/open-t1/test/: test_client.py
robot/scripts/: build_and_flash_esp32.sh  setup_esp32.sh
scripts/: build_rpi_bundle.sh  compile_on_rpi.sh  copy_project_to_rpi.sh  get_rpi_ip.sh  install_ros2_on_rpi.sh  install_uros.sh  ros2_installation_script.sh  source_ros2.sh  transfer_rpi_bundle.sh
